# pyarray-bindings

./: .gitignore  .travis.yml  .travis_build.sh  CMakeLists.txt  README.md  script.py
CMake/Modules/: FindNumPy.cmake
include/tick/array/: ArrayLike.hpp  PyArray.hpp  PyArray.tpp  PyArray2d.hpp  PyNdArray.hpp  PyRef.hpp  PyScalar.hpp  PyScalar.tpp  TypeTraits.hpp  TypedArray.hpp  TypedArray.tpp
include/xdata/array/: ArrayLike.hpp  Fwd.hpp  PyArray.hpp  PyArray.tpp  PyRef.hpp  PyScalar.hpp  PyScalar.tpp  TypeTraits.hpp  TypedArray.hpp  TypedArray.tpp
src/tick/array/: PyRef.cpp
src/xdata/array/: PyArray.cpp  PyRef.cpp  TypedArray.cpp
test/: CMakeLists.txt
test/array/: test_array.cpp
test/python/: CMakeLists.txt  interface.cpp  interface.hpp  typemap.i
